--- a/package.json
+++ b/package.json
@@ -3,18 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@fontsource-variable/raleway": "^5.2.5",
     "@fontsource-variable/montserrat": "^5.2.5",
+    "@fontsource-variable/raleway": "^5.2.5",
+    "gray-matter": "^4.0.3",
     "next": "15.3.2",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.18"
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
+    "styled-components": "^6.1.18",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
