--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@carlsonerik/netgraph": "0.3.0",
     "@fontsource-variable/montserrat": "^5.2.5",
     "@fontsource-variable/raleway": "^5.2.5",
+    "@popperjs/core": "^2.11.8",
+    "d3": "^7.9.0",
+    "gneiss-editor": "^0.5.0",
     "gray-matter": "^4.0.3",
     "next": "15.3.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-popper": "^2.3.0",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.1",
     "remark-parse": "^11.0.0",
