--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "erik-carlson-portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,7 +16,7 @@
     "d3": "^7.9.0",
     "gneiss-editor": "^0.5.0",
     "gray-matter": "^4.0.3",
-    "next": "15.3.2",
+    "next": "16.0.7",
     "react": "^18",
     "react-dom": "^18",
     "react-popper": "^2.3.0",
@@ -31,8 +31,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.7",
     "typescript": "^5"
   }
 }
